force-app/main/default/objects/Staff_Attendance__c/Staff_Attendance__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Staff Attendance.</description>
    <label>Staff Attendance</label>
    <nameField>
        <displayFormat>ATT-{00000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Attendance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>