force-app/main/default/objects/Staff_Attendance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
                <default>true</default>
                <label>Present</label>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>