force-app/main/default/objects/Staff_Attendance__c/validationRules/Check_Out_After_Check_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_After_Check_In</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Check_In_Time__c)), NOT(ISBLANK(Check_Out_Time__c)), Check_Out_Time__c &lt;= Check_In_Time__c)</errorConditionFormula>
    <errorDisplayField>Check_Out_Time__c</errorDisplayField>
    <errorMessage>Check-out time must be after check-in time.</errorMessage>
</ValidationRule>